--- a/g/gl/glo/globalsecurity.org.html
+++ b/g/gl/glo/globalsecurity.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the globalsecurity.org privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216014741id_/http%3A//www.globalsecurity.org/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the globalsecurity.org privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616153638id_/http%3A//www.globalsecurity.org/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><!-- InstanceBegin template="/Templates/global.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="head" -->
@@ -8,7 +8,7 @@
 <meta name="keywords" content="military information, military systems, military facilities, military agencies, military industry, military operations, military countries, military documents, military news, military reports, military policy, military budget, military links, global security, homeland security, military, intelligence, wmd, space, public eye">
 <meta name="author" content="John Pike">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link href="/global.css" rel="stylesheet" type="text/css" media="all">
+<link href="/global-org.css" rel="stylesheet" type="text/css" media="all">
 <link rel="shortcut icon" href="http://globalsecurity.org/favicon.ico" type="image/x-icon">
 <!-- InstanceEndEditable -->
 <script type="text/javascript" language="javascript" src="/qs.js"></script>
@@ -23,8 +23,11 @@
 <ul>
   <li id="nav-education"><a href="http://www.globalsecurity.org/education/index.html" title="Education">Education</a></li>
   <li id="nav-jobs"><a href="http://globalsecurity.clearancejobs.com/" title="Jobs">Jobs</a></li>
-  <li id="nav-travel"><a href="http://globalsecurity.tradepub.com/" title="White Papers">White Papers</a></li>
-  <li id="nav-travel"><a href="http://www.globalsecurity.org/travel/index.html" title="Travel">Travel</a></li>
+  <li id="nav-travel"><a href="http://www.militarytravelnow.com/" title="Travel">Travel</a></li>
+  <li id="nav-papers"><a href="http://globalsecurity-whitepapers.tradepub.com/" title="White Papers">White Papers</a></li>
+  <li id="nav-magazines"><a href="http://globalsecurity.tradepub.com/">Magazines</a></li>
+  <li id="nav-books"><a href="http://www.globalsecurity.org/books/index.html" title="Bookstore">Books</a></li>
+  <li id="nav-reports"><a href="http://www.asdreports.com/shopaff.asp?affid=6" title="Reports">Reports</a></li>
   <li id="nav-gifts"><a href="http://www.uscav.com/gs/" title="Online Store">Online Store</a></li>
   <!--
   <li id="nav-gifts"><a href="http://www.globalsecurity.org/gifts/index.html" title="Gift Center">Gifts</a></li>
@@ -50,6 +53,8 @@
 </form>
 </div>
       <div id="navleft"><ul id="navlist">
+  <li><a href="http://forum.globalsecurity.org/" title="Military Discussion Forum">Forum</a></li>
+  <li><a href="http://images.globalsecurity.org/" title="Military Images">Images</a></li>
   <li><a href="/military/index.html" title="Military Information">Military</a></li>
   <li><a href="/wmd/index.html" title="WMD Information">WMD</a></li>
   <li><a href="/intell/index.html" title="Intelligence Information">Intelligence</a></li>
@@ -57,19 +62,12 @@
   <li><a href="/space/index.html" title="Space Information">Space</a></li>
   <li><a href="/eye/index.html" title="Public Eye">Public Eye</a></li>
 </ul>
-<!-- AddThis Button BEGIN -->
-<div align="center">
-<script type="text/javascript">addthis_pub  = 'globalsecurity';
-addthis_brand           = 'GlobalSecurity.org';
-addthis_options         = 'favorites, email, digg, delicious, facebook, myspace, google, live, fark, reddit, slashdot, stumbleUpon, more';
-</script>
-<a href="http://www.addthis.com/bookmark.php" onmouseover="return addthis_open(this, '', '[URL]', '[TITLE]')" onmouseout="addthis_close()" onclick="return addthis_sendto()"><img src="http://s7.addthis.com/button1-share.gif" width="125" height="16" border="0" alt=""></a><script type="text/javascript" src="http://s7.addthis.com/js/152/addthis_widget.js"></script>
-<!-- AddThis Button END -->
 <br>
+<div align="center">
 <!-- Begin RSS -->
 <a href="/globalsecurity-org.xml"><img alt="GlobalSecurity.org RSS feed" src="/images/rss_feed.gif"></a>
-</div>
-<!-- End RSS --></div>
+<!-- End RSS -->
+</div></div>
       <div id="address">  300 N. Washington St.<br>
   Suite B-100<br>
   Alexandria, VA 22314<br>
@@ -99,8 +97,26 @@ addthis_options         = 'favorites, email, digg, delicious, facebook, myspace,
 Third Party Cookies<br>
 <p>In the course of serving advertisements to this site, our third-party advertiser may place or recognize a unique “cookie” on your browser.</p>
 <p>We send to your web browser many of the advertisements you see when you use our network of Web sites. However, we also allow other companies, called third-party ad servers or ad networks, to serve advertisements within our web pages. Because your web browser must request these advertising banners from the ad network Web site, these companies can send their own cookies to your cookie file, just as if you had requested a web page from the site. Please note that if an advertiser asks us to show an advertisement to a certain audience (for example, men ages 18-34) or audience segment (for example, men ages 13-24 who have viewed sports content) and you respond to that ad, the advertiser or ad-server may conclude that you fit the description of the audience they are trying to reach.  As always remember, we only authorize our third-party ad servers to employ anonymous cookies for ad delivery and anonymous targeting.  Our third-party ad servers do not collect, nor do we give them access, to any personally identifying information about you.  </p><p>
+This web site participates in Six Apart Media, a comprehensive advertising program provided by Six Apart Ltd. for publishers all across the Web.  This section of our privacy policy describes how Six Apart Ltd. and the third party advertising networks and advertisers that display advertisements through Six Apart Media (collectively, "Advertisers") collect, use, store and disclose data from visitors to this Web site.</p><p>
+A "cookie" is a small amount of data, which often includes an anonymous unique identifier that is sent to your browser from a Web site's computers and stored on your computer's hard drive.  Cookies can be used to target advertisements relevant to your interests, based on your visits to different Web sites, to provide traffic measurement and other analytics and to conduct research.  </p><p>
+A "Web beacon" is an electronic file on a Web page that allows a Web site to count users who have visited that page, to access certain cookies and to provide auditing, research and reporting for advertisers.  </p><p>
+When your browser requests a page that displays advertising from one of the Advertisers, the Advertiser may view, edit or set its own cookie through your browser.  In addition, the Advertiser may place its own Web beacon in the page, which may be triggered by your browser's request.</p>
+
+
+
+
+Advertiser Privacy Policies<p></p><p>
+If you would like to contact the Advertisers to learn more about their privacy policies and what options (if any) they offer to opt out of their data collection and use, please follow these links to their Web sites:</p><p>
+Six Apart Ltd.  </p><p>
+http://www.sixapart.com/privacy</p><p>
+Six Apart Media third party advertising networks and advertisers </p><p>
+http://www.sixapart.com/advertising/solutions-for-bloggers/privacy/3rd-party-list/index.html
+</p><p>
+
+
 Opting Out of Third-Party Ad Servers</p><p>
 If you want to prevent a third-party ad server from sending and reading cookies on your computer, you must visit each ad network's Web site individually and opt out (if they offer this capability). </p><p>
+Some of these third party advertising networks are participants in the Network Advertising Initiative ("NAI"), a cooperative of online marketing and analytics companies committed to building consumer awareness and establishing responsible business and data management practices and standards.  You can learn more about NAI and how you may "opt out" of targeted advertising delivered by NAI member ad networks.</p><p>
 The <a href="http://networkadvertising.org/managing/opt_out.asp">Network Advertising Initiative Opt-out Tool</a> was developed in conjunction with member advertising networks with the express purpose of allowing consumers to "opt out" of the targeted advertising delivered by these networks. Using this tool, you can examine your computer to see which ad networks have placed a cookie file on your PC. You may also review each NAI member's privacy policy. To opt out of an NAI member advertising program, simply check the box that corresponds to the company from which you wish to opt out and then press the "Submit" button at the bottom of the page. The tool will automatically replace the specified cookie(s) and verify your opt out status. </p><p>
 Opting out of a network does not mean you will no longer receive online advertising. It does mean that the network from which you opted out will no longer deliver ads tailored to your Web preferences and usage patterns. The NAI Opt-out Tool is cookie-based. In order for the tool to work on your computer, your browser must be set to accept 3rd party cookies. If you buy a new computer, change Web browsers or delete this cookie, you will need to perform the opt-out task again. Apple presets the Safari browser to block cookies from sites other than those you visit directly. As a result, the NAI opt out tool, which uses third party cookies, will not work for browsers left in this default setting.
 
@@ -118,53 +134,113 @@ Opting out of a network does not mean you will no longer receive online advertis
 <div id="adbot"><!-- InstanceBeginEditable name="adbot" -->&nbsp;<!-- InstanceEndEditable --></div>
 <div id="navbot"><a href="http://www.globalsecurity.org/org/advertise.htm" title="Advertise with Us">Advertise with Us</a> <span class="navsep">|</span>
 <a href="http://www.globalsecurity.org/org/index.html" title="About Us">About Us</a> <span class="navsep">|</span>
-<a href="http://www.globalsecurity.org/org/news/2008/index.html" title="GlobalSecurity.org In the News">GlobalSecurity.org In the News</a> <span class="navsep">|</span>
+<a href="http://www.globalsecurity.org/org/news/2009/index.html" title="GlobalSecurity.org In the News">GlobalSecurity.org In the News</a> <span class="navsep">|</span>
 <a href="http://www.globalsecurity.org/org/interns.htm" title="Internships">Internships</a> <span class="navsep">|</span>
 <a href="http://www.globalsecurity.org/sitemap.htm" title="Site Map">Site Map</a> <span class="navsep">|</span>
-<a href="http://www.globalsecurity.org/privacy.htm" title="Privacy Policy">Privacy</a></div>
-<div id="footer"><a href="http://www.globalsecurity.org/copyright.htm" title="Copyright">Copyright</a> © 2000-2008 GlobalSecurity.org All rights reserved.<br>
+<a href="http://www.globalsecurity.org/privacy.htm" title="Privacy Policy">Privacy</a>
+
+<script type="text/javascript">
+/* <![CDATA[ */
+ 
+function checkAdblock() {
+	if ( detectAdblock() ){
+		trackAdblock('Adblock Detected');
+	} else {
+		trackAdblock('No Adblock');
+	}
+}
+ 
+//Run checkAdblock when page is loaded
+if(document.addEventListener)
+	document.addEventListener("DOMContentLoaded", checkAdblock, false);
+ 
+//adapted from http://stackoverflow.com/questions/2472/how-can-i-tell-if-a-web-client-is-blocking-ads
+function detectAdblock(){
+	//Create an invisible test image 
+	var AbpImage = document.createElement("IMG");
+	AbpImage.id = 'abp_detector';
+	AbpImage.src = '/images/ad/banner.gif';
+	AbpImage.style.width = '0px';
+	AbpImage.style.height = '0px';
+	AbpImage.style.top = '-1000px';
+	AbpImage.style.left = '-1000px';
+	document.body.appendChild(AbpImage);
+	//Check if Adblock has tried to hide the image
+	var AbpDetected = (ws_getComputedStyle(document.getElementById('abp_detector'),'display') == 'none');
+	//Be nice - remove the image 
+	document.body.removeChild(AbpImage);
+	return AbpDetected;
+}
+ 
+//http://www.robertnyman.com/2006/04/24/get-the-rendered-style-of-an-element/
+function ws_getComputedStyle(oElm, strCssRule){
+	var strValue = "";
+	if(document.defaultView && document.defaultView.getComputedStyle){
+		strValue = document.defaultView.getComputedStyle(oElm, "").getPropertyValue(strCssRule);
+	}
+	else if(oElm.currentStyle){
+		strCssRule = strCssRule.replace(/\-(\w)/g, function (strMatch, p1){
+			return p1.toUpperCase();
+		});
+		strValue = oElm.currentStyle[strCssRule];
+	}
+	return strValue;
+}
+ 
+//Record Adblock state  
+function trackAdblock(state){
+ 
+	function readCookie(name) {
+		var nameEQ = name + "=";
+		var ca = document.cookie.split(';');
+		for(var i=0;i < ca.length;i++) {
+			var c = ca[i];
+			while (c.charAt(0)==' ') c = c.substring(1,c.length);
+			if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
+		}
+		return null;
+	}
+ 
+	var current_cookie = readCookie('__utmv');
+	if ( (current_cookie==null) || (current_cookie.indexOf(encodeURIComponent(state)) == -1) ){
+		//Set the user-defined segmentation variable with the Google Analytics tracker
+		if (typeof pageTracker != 'undefined'){
+  			pageTracker._setVar(state);
+	  	}
+	}
+}
+ 
+/* ]]> */
+</script>
+
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-8566500-1");
+pageTracker._trackPageview();
+} catch(err) {}</script></div>
+<div id="footer"><a href="http://www.globalsecurity.org/copyright.htm" title="Copyright">Copyright</a> © 2000-2009 GlobalSecurity.org All rights reserved.<br>
   Site maintained by: <a href="http://www.globalsecurity.org/org/staff/pike.htm" title="John Pike">John Pike</a><br>
-<!-- Start -->
-<!-- BEGIN I/PRO PAGE TAG - COPYRIGHT 2006 I/PRO Corporation ALL RIGHTS RESERVED. --> 
-<script language="JavaScript"> 
-var LSPT=""; 
-LSPT += "?durl=" + escape(document.URL); 
-LSPT += "&hostname=" + location.hostname; 
-LSPT += "&url=" + location.pathname; 
-LSPT += "&query=" + escape(location.search) + escape(location.hash); 
-LSPT += "&referrer=" + escape(document.referrer); 
-LSPT += "&browser=" + escape(navigator.appName); 
-LSPT += "&version=" + escape(navigator.appVersion); 
-LSPT += "&os=" + escape(navigator.platform); 
-LSPT += "&xdomain=globalsecurity.org"; 
-LSPT += "&custid=globalsecurity"; 
-</script> 
-<script language="Javascript"> 
-document.write('<img src=http://'+'content.ipro.com/images/pixel.gif'+LSPT+' height="1" width="1">'); 
-</script><img src="http://content.ipro.com/images/pixel.gif?durl=https%3A//web.archive.org/web/20081216014741id_/http%253A//www.globalsecurity.org/privacy.htm&amp;hostname=web.archive.org&amp;url=/web/20081216014741id_/http%3A//www.globalsecurity.org/privacy.htm&amp;query=&amp;referrer=&amp;browser=Netscape&amp;version=5.0%20%28X11%3B%20Linux%20x86_64%29%20AppleWebKit/537.36%20%28KHTML%2C%20like%20Gecko%29%20HeadlessChrome/69.0.3494.0%20Safari/537.36&amp;os=Linux%20x86_64&amp;xdomain=globalsecurity.org&amp;custid=globalsecurity" height="1" width="1"> 
-<noscript> 
-<img src="http://content.ipro.com/images/pixel?version=nonjava" height="1" width="1"> 
-</noscript> 
-<!-- END I/PRO PAGE TAG -->
-<!-- End -->
 
 
 <!-- Start -->
 <!-- Start Quantcast tag -->
-<script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
 <script type="text/javascript">
-_qacct="p-6fJn-SHYjc8os";quantserve();</script>
+_qoptions={
+qacct:"p-6fJn-SHYjc8os"
+};
+</script>
+<script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
 <noscript>
-<img src="http://pixel.quantserve.com/pixel/p-6fJn-SHYjc8os.gif" style="display: none" height="1" width="1" alt="Quantcast"/></noscript>
+<img src="http://pixel.quantserve.com/pixel/p-6fJn-SHYjc8os.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/>
+</noscript>
 <!-- End Quantcast tag -->
 <!-- End -->
 
-<script language="JavaScript">var tcdacmd="dt";</script>
-<script src="http://an.tacoda.net/an/14812/slf.js" language="JavaScript"></script>
 
- <!-- start Vibrant Media IntelliTXT script section --> 
- <script type="text/javascript" src="http://globalsecurity.us.intellitxt.com/intellitxt/front.asp?ipid=7736"></script> 
- <!-- end Vibrant Media IntelliTXT script section --> 
 <!-- InstanceBeginEditable name="modified" -->
 
 <!-- InstanceEndEditable --></div>
