--- a/s/si/sit/siterapture.com.html
+++ b/s/si/sit/siterapture.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the siterapture.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216024141id_/http%3A//www.siterapture.com/privacypolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the siterapture.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616154313id_/http%3A//siterapture.com/privacypolicy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Privacy Policy - SiteRapture</title>
@@ -79,23 +79,21 @@
             <td height="3" colspan="3"><img src="imgs/blank.gif" width="1" height="1"></td>
           </tr>
           <tr> 
-<td width="10" background="imgs/nav_bar_mid.gif"> 
+<td width="10" background="imgs/btm_nav_mid.gif"> 
 <div align="right"><b></b></div>
 </td>
-<td width="781" background="imgs/nav_bar_mid.gif" class="topnav"> 
+<td width="781" background="imgs/btm_nav_mid.gif" class="topnav"> 
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr> 
-<td width="783" height="29" align="center"> 
-<div align="left"><b><a href="http://www.siterapture.com">  Home</a>&nbsp; | 
-&nbsp;<a href="sitelisting.asp">Sites</a>&nbsp;&nbsp; |&nbsp;&nbsp;<a href="categorymaster.asp">Categories&nbsp;&nbsp; </a> |&nbsp;<a href="searchreviews.asp">&nbsp;Reviews &amp; Ratings&nbsp;</a> | <a href="searchtutorials.asp">&nbsp;Tutorials &amp; How-tos&nbsp;</a> |&nbsp;<a href="qanda.asp"> Ask Experts</a>&nbsp; |<a href="http://blog.siterapture.com"> 
-&nbsp;SR Blog</a> &nbsp; |<a href="siterapturetvmain.asp">&nbsp; SR TV&nbsp;&nbsp; 
-</a> |<a href="newsmain.asp">&nbsp; News</a>&nbsp;  |&nbsp; 
-<a href="usermain.asp">Users</a>&nbsp; |&nbsp;&nbsp;<a href="help.asp"> Help</a>&nbsp;&nbsp; </b> </div>
+<td width="783" height="33" align="center"> 
+<div align="left"><b><a href="http://www.siterapture.com"> &nbsp; &nbsp;Home&nbsp;&nbsp; &nbsp;&nbsp; </a>|&nbsp;<a href="sitelisting.asp?CategoryID=1">&nbsp;&nbsp;&nbsp; Websites&nbsp;&nbsp; &nbsp;&nbsp; </a>|&nbsp;&nbsp;<a href="categorymaster.asp">&nbsp;&nbsp;&nbsp; Categories&nbsp;&nbsp;&nbsp;&nbsp;</a> | <a href="searchreviews.asp">&nbsp;&nbsp;&nbsp; Website Reviews &amp; 
+Tutorials&nbsp;&nbsp;&nbsp;&nbsp; </a>| <a href="http://blog.siterapture.com"> 
+&nbsp;&nbsp; &nbsp; Blog&nbsp; </a> <a href="http://blog.siterapture.com">&nbsp;&nbsp; </a>|&nbsp;<a href="games.asp">&nbsp;&nbsp;&nbsp; Play Games &nbsp; </a>&nbsp; |&nbsp;<a href="http://www.grabstats.com"> &nbsp; &nbsp;&nbsp;Industry Statistics&nbsp;&nbsp; </a>&nbsp;&nbsp; </b> </div>
 </td>
 </tr>
 </tbody></table>
 </td>
-<td width="5" background="imgs/nav_bar_mid.gif"><b></b></td>
+<td width="5" background="imgs/btm_nav_mid.gif"><b></b></td>
 </tr>
         </tbody></table></td>
       </tr>
@@ -219,11 +217,11 @@ info@siterapture.com<br>
           <tbody><tr>
             <td width="7"><img src="imgs/btm_nav_lft.gif" width="7" height="44"></td>
             <td background="imgs/btm_nav_mid.gif" class="topnav"><div id="footer" align="center"><font color="#FFFFFF" face="Arial, Helvetica, sans-serif"><a href="aboutus.asp">About 
-Us</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| &nbsp;&nbsp;&nbsp;&nbsp;<a href="contactus.asp">Contact 
-Us</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| &nbsp;&nbsp;&nbsp;<a href="investorrelations.asp">Investor 
-Relations</a> &nbsp;&nbsp; &nbsp;| &nbsp;&nbsp;&nbsp;&nbsp;<a href="privacypolicy.asp">Privacy 
-Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| &nbsp;&nbsp;&nbsp;<a href="tc.asp">Terms 
-&amp; Conditions</a></font></div></td>
+Us</a> &nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;<a href="contactus.asp">Contact 
+Us</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;<a href="investorrelations.asp">Investor 
+Relations</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="privacypolicy.asp">Privacy 
+Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;<a href="tc.asp">Terms 
+&amp; Conditions</a></font><font color="#FFFFFF" face="Arial, Helvetica, sans-serif">&nbsp; &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp; &nbsp;</font><font color="#FFFFFF" face="Arial, Helvetica, sans-serif"><a href="help.asp">Help</a></font>&nbsp; &nbsp;<font color="#FFFFFF" face="Arial, Helvetica, sans-serif">|&nbsp;&nbsp; </font> <font color="#FFFFFF" face="Arial, Helvetica, sans-serif"><a href="internships.asp">Internships</a></font></div></td>
             <td width="7"><img src="imgs/btm_nav_rt.gif" width="7" height="44"></td>
           </tr>
         </tbody></table></td>
@@ -233,14 +231,29 @@ Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| &nbsp;&nbsp;&nbsp;<a href="tc.asp">Ter
 </tbody></table>
 
 </center>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
+<!-- Start Good Analyatics tag -->
 <script type="text/javascript">
-_uacct = "UA-1871166-1";
-_udn="none"; 
-  _ulink=1;
-urchinTracker();
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-1871166-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+<!-- End Google Analytics tag -->
+
+<!-- Start Quantcast tag -->
+<script type="text/javascript">
+_qoptions={
+qacct:"p-17lvcIgFLLVeY"
+};
 </script>
+<script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
+<noscript>
+<img src="http://pixel.quantserve.com/pixel/p-17lvcIgFLLVeY.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/>
+</noscript>
+<!-- End Quantcast tag -->
 
 
 </body></html>
