--- a/s/su/sur/surepayroll.com.html
+++ b/s/su/sur/surepayroll.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the surepayroll.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216052537id_/http%3A//www.surepayroll.com/SecurityCenter/BcrhWare/default.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the surepayroll.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616154421id_/http%3A//www.surepayroll.com/SecurityCenter/BcrhWare/default.asp) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Payroll - Payroll on the Web - Internet Payroll - SurePayroll - Security Center</title>
@@ -14,48 +14,19 @@ online, deduction">
 
 <body class="v1_1">
 
+<div class="headerSubpages">
+    <div class="headerLeftSubpages"><a href="/default.asp"><img src="/spsite/navigation/images/hg_splogo300.gif" width="300" height="104" border="0" align="left"></a></div>
+    <div class="headerSubpagesCenter"><img src="/images/v1_1/homepage/icon_hablamosespanol.gif" border="0" align="right"></div>
+    <div class="headerSubpagesRightLinks"><a href="/enroll/StartAccount.asp" title="Run Payroll"><img src="/spsite/navigation/images/hgToolbar_enroll.gif" width="167" height="39" border="0"></a><br><a href="/quote/instant_price_quote.asp" title="Payroll Quote"><img src="/spsite/navigation/images/hgToolbar_freequote.gif" width="167" height="30" border="0"></a><br><a href="/contactus/default.asp" rel="nofollow"><img src="/spsite/navigation/images/hgToolbar_contact.gif" width="167" height="35" border="0"></a></div>
+    <div class="headerSubpagesRightLogin"><a href="/login/login.asp" rel="nofollow"><img src="/spsite/navigation/images/hgToolbar_login.gif" width="146" height="104" border="0"></a></div>
+</div>
+
+<!--  -->
 
 
 
-<div class="header_v1_1">
-<div class="headerLT_v1_1"><a href="/default.asp"><img src="/spsite/navigation/images/hg_splogo.gif" width="407" height="104" border="0"></a>
-</div><!--left end-->
-<div class="login"><a href="/login/login.asp" rel="nofollow"><img src="/spsite/navigation/images/hgToolbar_login.gif" width="146" height="104" border="0"></a></div>
-<div class="headerRT_v1_1">
-<div class="enroll"><a href="/enroll/StartAccount.asp" title="Run Payroll"><img src="/spsite/navigation/images/hgToolbar_enroll.gif" width="197" height="39" border="0"></a></div>
-<div class="freequote"><a href="/quote/instant_price_quote.asp" title="Payroll Quote"><img src="/spsite/navigation/images/hgToolbar_freequote.gif" width="197" height="30" border="0"></a></div>
-  <div class="contact"><a href="/contactus/default.asp" rel="nofollow"><img src="/spsite/navigation/images/hgToolbar_contact.gif" width="197" height="35" border="0"></a></div>
-</div><!--right end-->
-</div><!--container end-->
 
-<!-- SiteCatalyst code version: H.10. -->
-<script language="JavaScript" src="/include/s_code.js"></script><img name="s_i_j2globalonebox" height="1" width="1" border="0" alt="" src="https://j2global.122.2o7.net/b/ss/j2globalonebox/1/H.9-pdv-2/s33393972017850?[AQB]&amp;ndh=1&amp;t=30/0/2020%2017%3A5%3A20%204%200&amp;ce=ISO-8859-1&amp;ns=j2global&amp;pageName=SecurityCenter%20-%20Security%20Center%20HP&amp;g=https%3A//web.archive.org/web/20081216052537id_/http%253A//www.surepayroll.com/SecurityCenter/BcrhWare/default.asp&amp;cc=USD&amp;ch=SecurityCenter&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
-<script language="JavaScript"><!--
-/* You may give each page an identifying name, server, and channel on
-the next lines. */
-s.pageName="SecurityCenter - Security Center HP"
-s.channel="SecurityCenter"
-s.pageType=""  //USE ONLY ON 404 ERROR PAGES
-s.prop1=""
-s.prop2=""
-s.prop3=""
-s.prop4=""
-s.prop5=""
-s.prop6=""
-s.prop7=""
-/* E-commerce Variables */
-s.products=""
-s.campaign=""
-s.events=""
-s.eVar1=""
-s.eVar2=""
-s.eVar3=""
-s.eVar4=""
-s.eVar5=""
-s.eVar6=""
-/************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
-var s_code=s.t();if(s_code)document.write(s_code)//--></script>
-<!-- End SiteCatalyst code version: H.10. -->
+	
 
 
 <div id="container_v1_1">
@@ -66,44 +37,46 @@ var s_code=s.t();if(s_code)document.write(s_code)//--></script>
 <img src="/images/v1_1/topNavigationImage.gif" alt="SurePayroll Navigation"><ul id="navmenu">
 	<li><a href="/product/payroll/">Payroll</a>
 		<ul>
-			<li><a href="/product/payroll/what-you-get.asp" rel="nofollow">What You Get</a></li>
-			<li><a href="/product/payroll/compare-services.asp&#10;">Compare Payroll Services</a></li>
-
-			<li><a href="/guidedtour/">Payroll Guided Tour</a></li>
+			<li><a href="/product/payroll/what-you-get.asp">Payroll Features</a>
+			    <ul>
+			        <li><a href="/product/payroll/1-clickpayroll.asp">1-Click Payroll</a></li>
+			        <li><a href="/product/payroll/clergy-payroll.asp">Clergy Payroll</a></li>
+			        <li><a href="/product/compliance/">Compliance</a></li>
+			        <li><a href="/product/payroll/time-clock-integration.asp">Time Clock Integration</a></li>
+			     
+		        </ul>
+		    </li>
+			
+			<li><a href="/product/payroll/payroll-services.asp">Compare Payroll Services</a></li>
+            <li><a href="/guidedtour/" rel="nofollow">Payroll Guided Tour</a></li>
 			<li><a href="/quote/instant_price_quote.asp">Free Payroll Quote</a></li>
-			<li><a href="/enroll/StartAccount.asp">Start Your Enrollment</a></li>
-			<li><a href="/login/login.asp" rel="nofollow">Log In</a></li>
+			<li><a href="/enroll/StartAccount.asp" rel="nofollow">Start Your Enrollment</a></li>
+			<li><a href="/login/login.asp" rel="nofollow">Customer Log In</a></li>
 		</ul>
 	</li>
-        <li><a href="/product/payroll/">What We Do</a>
+        <li><a href="/product/">Products &amp; Services</a>
 
 
 		<ul>
-			<li><a href="/product/payroll/">Payroll</a></li>
-			<li><a href="/product/401k/">401k</a></li>
-			<li><a href="/product/compliance/">Compliance</a></li>
+		    <li><a href="/product/payroll/">Payroll</a></li>
+			<li><a href="/product/401k/">401(k)</a></li>
 			<li><a href="/product/health-insurance/">Health Insurance</a></li>
-			<li><a href="/product/workers-compensation/" title="Workers' Compensation Insurance">Workers' Compensation</a></li>
+			<li><a href="/product/workers-compensation/">Workers' Compensation</a></li>
+			<li><a href="/product/screening/">Pre-Employment Screening</a></li>
 		</ul>
+
 
 	</li>
   	<li><a href="/surechoice/accountant_access.asp">Accountants</a>
     		<ul>
-      			<li><a href="/surechoice/accountant_access.asp" rel="nofollow">Log In</a></li>
+      			<li><a href="/surechoice/accountant_access.asp" rel="nofollow">Accountant Log In</a></li>
 			<li><a href="/surechoice/surechoice-refer.asp">Referral Program</a></li>
 			<li><a href="/surechoice/surechoice-resell.asp">Reseller Program</a></li>
-			<li><a href="/surechoice/guidedtour/">Accountant Guided Tour</a></li>
-            <li><a href="/surechoice/enrollment/enrollstartinfo.asp">Enroll in SureChoice</a></li>
+			<li><a href="/surechoice/guidedtour/" rel="nofollow">Accountant Guided Tour</a></li>
+            <li><a href="/surechoice/enrollment/enrollstartinfo.asp" rel="nofollow">Enroll in SureChoice</a></li>
         	</ul>
   	</li>
-  	<li><a href="/spsite/company/company-awards.asp">People are Talking</a>
-    		<ul>
-			<li><a href="/spsite/company/company-awards.asp&#10;">Awards</a></li>
-      			<li><a href="/spsite/company/read-testimonials.asp&#10;">Read Testimonials</a></li>
-			<li><a href="/spsite/company/watch-testimonials.asp &#10;">Watch Testimonials</a></li>
-
-        	</ul>
-  	</li>
+  	
   	<li><a href="/spsite/resources/">Small Business Tools</a>
     		<ul>
 			<li><a href="/calculator/">Calculators</a>
@@ -120,16 +93,18 @@ var s_code=s.t();if(s_code)document.write(s_code)//--></script>
 			<li><a href="/spsite/resources/fed_taxlinks.asp">Payroll Tax Resources</a></li>
 		</ul>
   	</li>
-	<li><a href="/scorecard/">Scorecard</a></li>
+	
 	<li><a href="/spsite/company/">About Us</a>
     		<ul>
-			<li><a href="/spsite/company/meet-the-team.asp">Meet SurePayroll</a></li>
-
+			<li><a href="/spsite/company/meet-the-team.asp">Meet Our Team</a></li>
+            <li><a href="/spsite/company/company-awards.asp">Company Awards</a></li>
+    		<li><a href="/spsite/company/testimonials.asp">Testimonials</a></li>
 			<li><a href="/spsite/company/partners.asp">Partners</a></li>
 			<li><a href="/spsite/press/releases/">Media Releases</a></li>
 			<li><a href="/spsite/company/careers.asp">Careers</a></li>
         	</ul>
   	</li>
+  	<li><a href="/scorecard/">Scorecard</a></li>
 	<li><a href="/contactus/">Contact Us</a></li>
 </ul>
     <div id="sectionHeader">
@@ -202,27 +177,23 @@ We have taken every reasonable measure we know of to ensure that your data remai
 
 
 <img src="/images/spsite/spacer_clear.gif" width="750" height="10">
-<form action=" http://cl.exct.net/subscribe.aspx" name="subscribeForm" method="post">
-<input type="hidden" name="thx" value="http://www.surepayroll.com/newsletter/payrolliq/default.asp?msg=thanks"><input type="hidden" name="err" value="http://www.surepayroll.com/newsletter/payrolliq/default.asp"> <input type="hidden" name="SubAction" value="sub"> <input type="hidden" name="MID" value="71580"><input type="hidden" name="Email Type" value="HTML"> <input type="hidden" name="lid" value="875554">
+
  <div class="stage">
     <div id="footer_v1_1">
-    <img src="/images/spsite/spacer_clear.gif" width="730" height="5">
+    <img src="/images/spsite/spacer_clear.gif" width="730" height="10">
 
-            <a href="/spsite/service/faq.asp" title="FAQ" class="footerlinks">FAQ</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/SecurityCenter/BcrhWare/default.asp" title="Privacy &amp; Security" class="footerlinks">Privacy &amp; Security</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/contactus/default.asp" title="Contact Us" class="footerlinks">Contact Us</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/online-payroll/" title="Site Map" class="footerlinks">Site Map</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/login/login.asp" title="Login" class="footerlinks">Login</a>&nbsp;&nbsp;</div><!-- end footer v1_1 -->
+            <a href="/spsite/service/faq.asp" title="FAQ" class="footerlinks">FAQ</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/SecurityCenter/BcrhWare/default.asp" title="Privacy &amp; Security" class="footerlinks">Privacy &amp; Security</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/contactus/default.asp" title="Contact Us" class="footerlinks">Contact Us</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/online-payroll/" title="Site Map" class="footerlinks">Site Map</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/login/login.asp" title="Login" class="footerlinks">Login</a><img src="/images/spsite/spacer_clear.gif" width="750" height="10"></div><!-- end footer v1_1 -->
 
             
 
             <img src="/images/spsite/spacer_clear.gif" width="750" height="10">
 
-            <div id="footer_v1_1_small">PC Magazine Editor's Choice Award Logo is a registered is a trademark Ziff Davis Publishing Holding Inc. Used under lincense.<br>SurePayroll - <a href="/" title="Payroll Services" class="footerlinkssmall">Online Payroll Services</a> - Small Business Payroll offering <a href="/product/payroll/" title="Payroll" class="footerlinkssmall">Payroll</a>, <a href="/product/401k/" title="401k" class="footerlinkssmall">401k</a>, and <a href="/product/compliance/" title="Poster Compliance" class="footerlinkssmall">Poster Compliance</a> ©2001-2008 SurePayroll ©All Rights Reserved</div>
+            <div id="footer_v1_1_small">PC Magazine Editor's Choice Award Logo is a registered is a trademark Ziff Davis Publishing Holding Inc. Used under license.<br>SurePayroll - <a href="/" title="Payroll Services" class="footerlinkssmall">Online Payroll Services</a> - Small Business Payroll offering <a href="/product/payroll/" title="Payroll" class="footerlinkssmall">Payroll</a>, <a href="/product/401k/" title="401k" class="footerlinkssmall">401k</a>, and <a href="/product/compliance/" title="Poster Compliance" class="footerlinkssmall">Poster Compliance</a> ©2001-2009 SurePayroll ©All Rights Reserved</div>
 
 
 
 
-</div>
-</form>
-
-<script type="text/javascript">
+</div><script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
@@ -230,6 +201,18 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 var pageTracker = _gat._getTracker("UA-610453-1");
 pageTracker._trackPageview();
 </script>
+
+    <script type="text/javascript">
+	    document.write('<'
+	    +'script type="text/javascript" src="'
+	    +document.location.protocol
+	    +'//stats2.clicktracks.com/cgi-bin/ctasp-server.cgi'
+	    +'?i=CWeIPveLVGc24M'
+	    +'"></'+'script>');
+    </script><script type="text/javascript" src="https://stats2.clicktracks.com/cgi-bin/ctasp-server.cgi?i=CWeIPveLVGc24M"></script>
+    <noscript>
+	    <img src="https://stats2.clicktracks.com/cgi-bin/ctasp-server.cgi?i=CWeIPveLVGc24M&g=1" alt="Web Analytics" border=0>
+    </noscript>
 
 </div><!-- END CONTAINER V1_1 -->
 
